--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
     <header class="bg-transparent">
         <div class="container pt-4 pt-xl-5">
             <div class="row pt-5">
-                <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
+                <div class="col-md-8 col-xl-6 text-white mx-auto">
                     <div class="text-center">
                         <h1 class="fw-bold">The best cinema</h1>
                     </div>
