--- a/src/main/resources/templates/tickets/buying.html
+++ b/src/main/resources/templates/tickets/buying.html
@@ -49,42 +49,45 @@
             </div>
         </div>
     </nav>
+</div>
 
+    <div class="container">
     <div class="row">
-        <table class="table text-white">
+        <table class="table bg-secondary h5 text-light">
             <thead>
             <tr>
-                <th scope="col">Название фильма</th>
-                <th scope="col">Зал</th>
-                <th scope="col">Дата</th>
-                <th scope="col">Время просмотра</th>
-                <th scope="col">цена</th>
+                <th scope="col">Film</th>
+                <th scope="col">Hall</th>
+                <th scope="col">Date</th>
+                <th scope="col">Duration</th>
+                <th scope="col">Price</th>
             </tr>
             </thead>
             <tbody>
-            <td data-label="Название фильма" th:text="${film.nameFilm}"></td>
-            <td data-label="Зал" th:text="${film.nameHall}"></td>
-            <td data-label="Дата" th:text="${film.startTime}"></td>
-            <td data-label="Время просмотра" th:text="${film.durationInMinutes}"></td>
-            <td data-label="Цена" th:text="${film.price}"></td>
+            <td data-label="Film" th:text="${film.nameFilm}"></td>
+            <td data-label="Hall" th:text="${film.nameHall}"></td>
+            <td data-label="Date" th:text="${film.startTime}"></td>
+            <td data-label="Duration" th:text="${film.durationInMinutes}"></td>
+            <td data-label="Price" th:text="${film.price}"></td>
             </tbody>
         </table>
     </div>
+    </div>
 
     <div class="container">
+        <div class="row">
         <form class="mt-3" th:action="@{/tickets/buying}" method="post"
               enctype="multipart/form-data">
 
-
-            <div class="form-group">
-                <label for="rowNumber">Ряд</label>
+            <div class="form-group text-white">
+                <label for="rowNumber">Row</label>
                 <select class="form-control" th:field="*{ticket.rowNumber}" id="rowNumber">
                     <option th:each="row : ${maxRow}" th:value="${row}" th:text="${row}"></option>
                 </select>
             </div>
 
-            <div class="form-group">
-                <label for="placeNumber">Место</label>
+            <div class="form-group text-white">
+                <label for="placeNumber">Place</label>
                 <select class="form-control" th:field="*{ticket.placeNumber}" id="placeNumber">
                     <option th:each="place : ${maxPlace}" th:value="${place}" th:text="${place}"></option>
                 </select>
@@ -99,6 +102,7 @@
                         <button class="btn btn-light btn-lg btn-block m-1" type="reset">Cancel</button>
                     </a>
                 </form>
+
             </div>
 
         </form>
