--- a/src/main/resources/templates/tickets/successBuy.html
+++ b/src/main/resources/templates/tickets/successBuy.html
@@ -51,7 +51,7 @@
     </nav>
 
     <div class="container">
-        <h3 class="mt-3">Билет успешно куплен</h3>
+        <h3 class="mt-3 text-white">Ticket successfully purchased</h3>
         <p class="text-success" th:text="${message}"></p>
     </div>
 
